2005-08-03  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (decode-universal-time) [!(UNIX|WIN32)]:
	call FLOOR just once instead of twice

2005-08-02  Sam Steingold  <sds@gnu.org>

	* encoding.d (init_dependent_encodings, SET-FOREIGN-ENCODING):
	partially reversed the 2005-07-30 patch: O(foreign_8bit_encoding)
	must agree with O(foreign_encoding) and only ASCII agrees with
	_all_ encodings, so use ASCII instead of DEFAULT_1_1_ENCODING

2005-08-02  Sam Steingold  <sds@gnu.org>

	use symbol property lists instead of the global *DOCUMENTATION*
	hash table: the table is not weak, so it is not cleaned up
	this also reduced the size of lispinit.mem by almost 10% (15k)
	* init.lisp (get-funname-symbol): moved up
	(get-doc-entity-symbol): new function
	(%set-documentation, check-redefinition):
	use it with GET instead of GETHASH
	* describe.lisp (describe1): do not use *DOCUMENTATION*
	* documentation.lisp (documentation, (setf documentation)): ditto
	also, CHECK-FUNCTION-NAME may return a symbol when given a list
	(function-documentation, set-function-documentation): new functions

2005-08-02  Sam Steingold  <sds@gnu.org>

	* package.d (cerror_package_locked): PACKAGE-ERROR slot PACKAGE
	must be a PACKAGE, not a list thereof (coming from CHECK-REDEFINITION)

2005-08-02  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/test.tst (show): moved to tests/tests.lisp
	* modules/rawsock/test.tst, modules/zlib/test.tst:
	use SHOW instead of PRINT

2005-08-01  Sam Steingold  <sds@gnu.org>

	when the specified memory image does not exist, try appending ".mem"
	* spvw_memfile.d (open_filename): new function (extracted from loadmem)
	(loadmem): use it, and retry with filename".mem" on failure

2005-08-01  Sam Steingold  <sds@gnu.org>

	* spvw_global.d (check_pack_consistency): made static to avoid warning

2005-08-01  Sam Steingold  <sds@gnu.org>

	* savemem.lisp (saveinitmem): ensure that *PACKAGE*
	is bound to a package

2005-08-01  Sam Steingold  <sds@gnu.org>
